fdo#64456 impl_getValues always set m_nConvertedBoundValuesType

That is, also when returning an ephemeral value constructed from StringItemList

Change-Id: I3f0edcb6cc31926c6b82acbcb88282829314b859